<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_login"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/subdiv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/subdiv"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/dp40"
            android:elevation="@dimen/dp5"
            android:foreground="?android:selectableItemBackground"
            app:cardCornerRadius="@dimen/dp8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text16"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/black"
                    android:layerType="software" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="start"
                    android:text="User Role"
                    android:textColor="@color/black"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30"
                    android:background="@drawable/spinner_bg"
                    android:inputType="text"
                    android:textSize="@dimen/text14" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:gravity="start"
                    android:text="@string/login_user"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp40"
                    android:background="@drawable/spinner_bg"
                    android:drawableStart="@drawable/ic_person2"
                    android:inputType="text"
                    android:maxLength="8"
                    android:textSize="@dimen/text14" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:gravity="start"
                    android:text="@string/login_password"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <com.google.android.material.textfield.TextInputLayout
                    app:passwordToggleEnabled="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp40"
                        android:background="@drawable/spinner_bg"
                        android:drawableStart="@drawable/ic_lock"
                        android:inputType="textPassword"
                        android:textSize="@dimen/text14" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/login_btn"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/company_details_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:gravity="center"
                android:text="@string/company_details"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/version_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>